dodat rss i sitemap

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 				</div>
 				<div id="footer-mid">
 					<div id="social-icons">
-						<div id="socialExp"></div>
-						<div id="socialExp"></div>
+						<div id="socialExp"><a href="sitemap.xml" target="_blank">sitemap</a></div>
+						<div id="socialExp"><a href="novosti.xml" target="_blank">rss</a></div>
 						<div id="socialExp"></div>
 					</div>
 					
