dodate entrance animacije, linkovan rss i sitemap, dodat nav footeru

--- a/usluge-stranice/hirurgija.html
+++ b/usluge-stranice/hirurgija.html
@@ -53,33 +53,40 @@
         </main>
 
         <footer id="footer">
-            <div id="footer-top">
-                <div id="footer-right">
-                    <a href="../index.html"><img src="../imgs/logo.png" alt="logo" id="logo"></a>
-                </div>
-                <div id="footer-mid">
-                    <div id="social-icons">
-                        <div id="socialExp"></div>
-                        <div id="socialExp"></div>
-                        <div id="socialExp"></div>
-                    </div>
-                    
-                </div>
-                <div id="footer-left">
-                    <div id="contact-info">
-                        <span class="material-symbols-outlined whiteColor"> phone_in_talk </span>
-                        <p>011 40 40 100</p>
-                    </div>
-                    <div id="contact-info">
-                        <span class="material-symbols-outlined whiteColor">mail</span>
-                        <a href="mailto:zakazivanje@medigroup.rs">zakazivanje@medigroup.rs</a>
-                    </div>
-                </div>
-            </div>
-            <div id="footer-bottom">
-                <p id="copyright">&copy; 2023 Miloš Milosavljević 9/23 All rights reserved.</p>
-            </div>
-        </footer>
+			<div id="footer-top">
+				<div id="footer-right">
+					<a href="index.html"><img src="../imgs/logo.png" alt="logo" id="logo"></a>
+				</div>
+				<div id="footer-mid">
+					<div id="social-icons">
+						<a href="../sitemap.xml" target="_blank"><div id="socialExp"><img src="../imgs/sitemap.png" alt="sitemap"></div></a>
+						<a href="../novosti.xml" target="_blank"><div id="socialExp"><img src="../imgs/rss.png" alt="rss"></div></a>
+					</div>
+					<nav class="footer-nav">
+						<ul>
+							<li><a href="../index.html">Početna</a></li>
+							<li><a href="../galerija.html">Galerija</a></li>
+							<li><a href="../usluge.html">Usluge</a></li>
+							<li><a href="../autor.html">o autoru</a></li>
+							<li><a href="../index.html#kontakt-section">kontakt</a></li>
+						</ul>
+					</nav>
+				</div>
+				<div id="footer-left">
+					<div id="contact-info">
+						<span class="material-symbols-outlined whiteColor"> phone_in_talk </span>
+						<p>011 40 40 100</p>
+					</div>
+					<div id="contact-info">
+						<span class="material-symbols-outlined whiteColor">mail</span>
+						<a href="mailto:zakazivanje@medigroup.rs">zakazivanje@medigroup.rs</a>
+					</div>
+				</div>
+			</div>
+			<div id="footer-bottom">
+				<p id="copyright">&copy; 2023 Miloš Milosavljević 9/23 All rights reserved.</p>
+			</div>
+		</footer>
     
 </body>
 </html>
