--- a/galerija.html
+++ b/galerija.html
@@ -60,11 +60,18 @@
             </div>
             <div id="footer-mid">
                 <div id="social-icons">
-                    <div id="socialExp"></div>
-                    <div id="socialExp"></div>
-                    <div id="socialExp"></div>
+                    <a href="sitemap.xml" target="_blank"><div id="socialExp"><img src="imgs/sitemap.png" alt="sitemap"></div></a>
+                    <a href="novosti.xml" target="_blank"><div id="socialExp"><img src="imgs/rss.png" alt="rss"></div></a>
                 </div>
-                
+                <nav class="footer-nav">
+                    <ul>
+                        <li><a href="index.html">Početna</a></li>
+                        <li><a href="galerija.html">Galerija</a></li>
+                        <li><a href="usluge.html">Usluge</a></li>
+                        <li><a href="autor.html">o autoru</a></li>
+                        <li><a href="index.html#kontakt-section">kontakt</a></li>
+                    </ul>
+                </nav>
             </div>
             <div id="footer-left">
                 <div id="contact-info">
