--- a/usluge-stranice/urologija.html
+++ b/usluge-stranice/urologija.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Medigroup</title>
-	<link rel="shortcut icon" href="../imgs/ico.ico">
+	<link rel="shortcut icon" href="../imgs/dna.png">
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
