small syntax fix

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8" />
 	<title>Medigroup</title>
-	<link rel="shortcut icon" href="imgs/dna.png">
-	<link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" href="imgs/dna.png" />
+	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
 		<header id="header">
-			<div><a href="index.html"><img src="imgs/logo.png" alt="logo" id="logo"></a></div>
+			<div><a href="index.html"><img src="imgs/logo.png" alt="logo" id="logo" /></a></div>
 			<nav>
 				<ul>
 					<li><a href="index.html">Početna</a></li>
@@ -28,7 +28,7 @@
 
 					<div id="levi">
 						<header id="naslov">
-							<img src="imgs/healthy.png" alt="famiy">
+							<img src="imgs/healthy.png" alt="heart" />
 							<hgroup>
 								<h1>MEDIGROUP</h1>
 								<h2>ZDRAVSTVENI SISTEM ZA CELU PORODICU</h2>
@@ -41,7 +41,7 @@
 					</div>
 
 					<div id="desni">
-						<img src="imgs/worker2.jpg" alt="radnica">
+						<img src="imgs/worker2.jpg" alt="radnica" />
 					</div>
 
 				</article>
@@ -58,7 +58,7 @@
 			<div id="kartice">
 				<article class="kartica-usluga" >
 					<a href="usluge.html#decijaMed">
-						<img src="imgs/baby.png" alt="dete">
+						<img src="imgs/baby.png" alt="dete" />
 						<h2>Dečija medicina</h2>
 						<p>Odeljenje dečje hirurgije Medigroup zdravstvenog sistema pruža usluge dijagnostike i lečenja hirurških bolesti dece od 0 do 18 godina.</p>
 					</a>
@@ -66,7 +66,7 @@
 
 				<article class="kartica-usluga" >
 					<a href="usluge.html#hirurgija">
-						<img src="imgs/surgery.png" alt="hirurg">
+						<img src="imgs/surgery.png" alt="hirurg" />
 						<h2>Hirurgija</h2>
 						<p> Uz hiruško odeljenje pacijentima na raspolaganju su i usluge poluintenzivne i intenzivne nege, kao i dva jednokrevetna i četiri dvokrevetna apartmana.</p>
 					</a>
@@ -74,7 +74,7 @@
 
 				<article class="kartica-usluga" >
 					<a href="usluge.html#urologija">
-						<img src="imgs/kidneys.png" alt="bubreg">
+						<img src="imgs/kidneys.png" alt="bubreg" />
 						<h2>Urologija</h2>
 						<p>Služba Urologije Medigroup bavi se savremenom dijagnostikom i lečenjem oboljenja organa urinarnog trakta kod muškaraca i žena.</p>
 					</a>
@@ -93,7 +93,7 @@
 				<article id="about-container">
 			
 					<div id="about-left">
-						<img src="imgs/discussion.jpg" alt="doctors discussing">
+						<img src="imgs/discussion.jpg" alt="doctors discussing" />
 					</div>
 					<div id="about-right">
 						<header class="section-title">
@@ -131,10 +131,10 @@
 				<div id="right-kontakt">
 				
 					<form method="POST" action="obrada.php" id="kontakt-forma">
-						<input type="text" name="ime-prezime" id="ime-prezime" placeholder="IME I PREZIME">
+						<input type="text" name="ime-prezime" id="ime-prezime" placeholder="IME I PREZIME" />
 						<div id="form-section">
-							<input type="email" name="e-mail" id="e-mail" placeholder="E-MAIL">
-							<input type="number" name="telefon" id="telefon" placeholder="TELEFON">
+							<input type="email" name="e-mail" id="e-mail" placeholder="E-MAIL" />
+							<input type="number" name="telefon" id="telefon" placeholder="TELEFON" />
 						</div>
 						<textarea name="poruka" id="poruka" cols="30" rows="10" placeholder="PORUKA"></textarea>
 						<button type="submit" class="CTA-form">POŠALJI</button>
@@ -148,12 +148,12 @@
 		<footer id="footer">
 			<div id="footer-top">
 				<div id="footer-right">
-					<a href="index.html"><img src="imgs/logo.png" alt="logo" id="logo"></a>
+					<a href="index.html"><img src="imgs/logo.png" alt="logo" id="logo" /></a>
 				</div>
 				<div id="footer-mid">
 					<div id="social-icons">
-						<a href="sitemap.xml" target="_blank"><div id="socialExp"><img src="imgs/sitemap.png" alt="sitemap"></div></a>
-						<a href="novosti.xml" target="_blank"><div id="socialExp"><img src="imgs/rss.png" alt="rss"></div></a>
+						<a href="sitemap.xml" target="_blank"><div id="socialExp"><img src="imgs/sitemap.png" alt="sitemap" /></div></a>
+						<a href="novosti.xml" target="_blank"><div id="socialExp"><img src="imgs/rss.png" alt="rss" /></div></a>
 					</div>
 					<nav class="footer-nav">
 						<ul>
