--- a/usluge-stranice/stomatologija.html
+++ b/usluge-stranice/stomatologija.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8" />
 	<title>Medigroup</title>
-	<link rel="shortcut icon" href="../imgs/dna.png">
-	<link rel="stylesheet" href="../style.css">
+	<link rel="shortcut icon" href="../imgs/dna.png" />
+	<link rel="stylesheet" href="../style.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
 		<header id="header">
-			<div><a href="../index.html"><img src="../imgs/logo.png" alt="logo" id="logo"></a></div>
+			<div><a href="../index.html"><img src="../imgs/logo.png" alt="logo" id="logo" /></a></div>
 			<nav>
 				<ul>
 					<li><a href="../index.html">Početna</a></li>
@@ -52,12 +52,12 @@
         <footer id="footer">
 			<div id="footer-top">
 				<div id="footer-right">
-					<a href="index.html"><img src="../imgs/logo.png" alt="logo" id="logo"></a>
+					<a href="index.html"><img src="../imgs/logo.png" alt="logo" id="logo" /></a>
 				</div>
 				<div id="footer-mid">
 					<div id="social-icons">
-						<a href="../sitemap.xml" target="_blank"><div id="socialExp"><img src="../imgs/sitemap.png" alt="sitemap"></div></a>
-						<a href="../novosti.xml" target="_blank"><div id="socialExp"><img src="../imgs/rss.png" alt="rss"></div></a>
+						<a href="../sitemap.xml" target="_blank"><div id="socialExp"><img src="../imgs/sitemap.png" alt="sitemap" /></div></a>
+						<a href="../novosti.xml" target="_blank"><div id="socialExp"><img src="../imgs/rss.png" alt="rss" /></div></a>
 					</div>
 					<nav class="footer-nav">
 						<ul>
