--- a/usluge.html
+++ b/usluge.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
 	<title>Medigroup</title>
-	<link rel="shortcut icon" href="imgs/dna.png">
-	<link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" href="imgs/dna.png" />
+	<link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
 
     <header id="header">
-        <div><a href="index.html"><img src="imgs/logo.png" alt="logo" id="logo"></a></div>
+        <div><a href="index.html"><img src="imgs/logo.png" alt="logo" id="logo" /></a></div>
         <nav>
             <ul>
                 <li><a href="index.html">Početna</a></li>
@@ -36,7 +36,7 @@
 
             <article class="usluge-kartica">
                 <a href="usluge-stranice/neurohirurgija.html">
-                    <img src="imgs/brain.png" alt="mozak">
+                    <img src="imgs/brain.png" alt="mozak" />
                     <h1>Neurohirurgija</h1>
                     <p>Rade se brojni operativni zahvati iz domena opšte neurohirurgije: operacije tumora na mozgu (benignih) i u moždanom tkivu (primarnih i sekudarnih). </p>
                     <button class="CTA">Saznaj vise</button>
@@ -45,7 +45,7 @@
             
             <article class="usluge-kartica">
                 <a href="usluge-stranice/stomatologija.html">
-                    <img src="imgs/crack.png" alt="zub">
+                    <img src="imgs/crack.png" alt="zub" />
                     <h1>Stomatologija</h1>
                     <p>Stomatologija MediGroup zdravstvenog sistema se bavi prevencijom, suzbijanjem, dijagnostifikovanjem i otklanjanjem bolesti zuba, usta i vilice. </p>
                     <button class="CTA">Saznaj vise</button>
@@ -54,7 +54,7 @@
 
             <article class="usluge-kartica">
                 <a href="usluge-stranice/genetika.html">
-                    <img src="imgs/dna.png" alt="dna">
+                    <img src="imgs/dna.png" alt="dna" />
                     <h1>Genetika</h1>
                     <p>U okviru MediGroup sistema odeljenje Genetike pruža savremene usluge iz oblasti kliničke i laboratorijske genetičke dijagnostike.</p>
                     <button class="CTA">Saznaj vise</button>
@@ -67,7 +67,7 @@
 
             <article class="usluge-kartica" id="decijaMed">
                 <a href="usluge-stranice/decija.html">
-                    <img src="imgs/baby.png" alt="mleko">
+                    <img src="imgs/baby.png" alt="mleko" />
                     <h1>Dečija medicina</h1>
                     <p>Odeljenje dečje hirurgije Medigroup zdravstvenog sistema pruža usluge dijagnostike i lečenja hirurških bolesti dece od 0 do 18 godina. </p>
                     <button class="CTA">Saznaj vise</button>
@@ -76,7 +76,7 @@
             
             <article class="usluge-kartica" id="hirurgija">
                 <a href="usluge-stranice/hirurgija.html">
-                    <img src="imgs/surgery.png" alt="hirurgija">
+                    <img src="imgs/surgery.png" alt="hirurgija" />
                     <h1>Hirurgija</h1>
                     <p> Uz hiruško odeljenje pacijentima na raspolaganju su i usluge poluintenzivne i intenzivne nege, kao i dva jednokrevetna i četiri dvokrevetna apartmana.</p>
                     <button class="CTA">Saznaj vise</button>
@@ -85,7 +85,7 @@
 
             <article class="usluge-kartica" id="urologija">
                 <a href="usluge-stranice/urologija.html">
-                    <img src="imgs/kidneys.png" alt="bubreg">
+                    <img src="imgs/kidneys.png" alt="bubreg" />
                     <h1>Urologija</h1>
                     <p>Služba Urologije Medigroup bavi se savremenom dijagnostikom i lečenjem oboljenja organa urinarnog trakta kod muškaraca i žena.</p>
                     <button class="CTA">Saznaj vise</button>
@@ -99,12 +99,12 @@
     <footer id="footer">
         <div id="footer-top">
             <div id="footer-right">
-                <a href="index.html"><img src="imgs/logo.png" alt="logo" id="logo"></a>
+                <a href="index.html"><img src="imgs/logo.png" alt="logo" id="logo" /></a>
             </div>
             <div id="footer-mid">
                 <div id="social-icons">
-                    <a href="sitemap.xml" target="_blank"><div id="socialExp"><img src="imgs/sitemap.png" alt="sitemap"></div></a>
-                    <a href="novosti.xml" target="_blank"><div id="socialExp"><img src="imgs/rss.png" alt="rss"></div></a>
+                    <a href="sitemap.xml" target="_blank"><div id="socialExp"><img src="imgs/sitemap.png" alt="sitemap" /></div></a>
+                    <a href="novosti.xml" target="_blank"><div id="socialExp"><img src="imgs/rss.png" alt="rss" /></div></a>
                 </div>
                 <nav class="footer-nav">
                     <ul>
